svg background changed from fixed / none on mobile

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
         --homeTab: 400px 1fr 1fr 1fr;
         --header-height: 100%;
         --header-top: 0%;
+        --bgfixed: fixed;
     }
 }
 
@@ -23,6 +24,7 @@
         --homeTab: 400px 1fr 1fr 1fr;
         --header-height: 90%;
         --header-top: 0%;
+        --bgfixed: fixed;
     }
 }
 
@@ -37,6 +39,7 @@
         --homeTab: 400px 1fr 1fr 1fr;
         --header-height: 80%;
         --header-top: -5%;
+        --bgfixed: fixed;
     }
 }
 
@@ -44,6 +47,7 @@
     :root {
         --map-width: 250px;
         --map-height: 300px;
+        --bgfixed: none;
     }
 }
 
